# wallpaper-rust

./: .gitignore  LICENSE  README.md  build-portable.ps1  index.html  package.json  pnpm-lock.yaml  vite.config.ts
data/database/: library.json  settings.json
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: 128x128.icns  256x256.icns  32x32.icns
src-tauri/native/: ffplay_wallpaper.cpp
src-tauri/src/: lib.rs  library.rs  main.rs  media_server.rs  models.rs
src-tauri/src/commands/: autolaunch.rs  cache.rs  database.rs  discover.rs  download.rs  image.rs  library.rs  mod.rs  settings.rs  system.rs  window.rs
src-tauri/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/wallpaper/: image.rs  mod.rs  video.rs  web.rs
src/api/: index.ts
src/components/: AppAlert.vue  FirstCloseDialog.vue  InspectorPanel.vue
src/composables/: useAppNav.ts
src/i18n/: index.ts
src/router/: index.ts
src/stores/: settings.ts
src/types/: index.ts  models.ts
src/utils/: db.ts  index.ts  logger.ts  media.ts
src/views/: DiscoverView.vue  HomeView.vue  LibraryView.vue  SettingsView.vue
